compiler/tests-spec/testData/psi/templates/identifiers/infixFunctionCall.kt
fun f() {
    1 + 1 <!ELEMENT!> 10..11

    1 + 1 <!ELEMENT!> 10..11 <!ELEMENT!> 10 <!ELEMENT!> -.9-9.0
}